--- a/exetra/e2.css
+++ b/exetra/e2.css
@@ -452,20 +452,15 @@
 #content .content-in .rightcol .head-3 {
     padding: 5px 0;
 }
-#content .content-in .rightcol .head-3 a {
-    width: 15% !important;
-    padding: 0 0 0 2% !important;
+#content .content-in .rightcol .head-3 a,
+#content .content-in .rightcol .invoices .item div {
+    width: 19% !important;
+    padding: 0 !important;
+    text-align: center;
 }
 #content .content-in .content .rightcol .invoices {
     padding-left: 0 !important;
     padding-right: 0 !important;
-}
-#content .content-in .rightcol .invoices .item {
-    width: 96%;
-}
-#content .content-in .rightcol .invoices .item div {
-    width: 15% !important;
-    padding: 0 0 0 2% !important;
 }
 #content .content-in .rightcol input#login_password_md5 + input + .item {
 	width: auto;
@@ -633,10 +628,48 @@ form#form_login div.item a.forgotpassword,
     margin-top: 5px;
     padding: 3px 0 !important;
 }
+.lightbox {
+    padding: 20px 0;
+}
+.lightbox .header {
+    height: auto;
+    padding-bottom: 20px;
+}
+.lightbox .header a.logo {
+    position: relative;
+}
+.lightbox .header .desc {
+    position: static;
+    clear: both;
+    width: 100%;
+    margin-top: 15px;
+}
 .lightbox .header .arrow {
     float: right;
     position: static;
     margin: 10px 0 0 10px;
+}
+.lightbox .header .arrow a {
+    display: block !important;
+    height: 32px;
+    line-height: 32px;
+}
+.lightbox .pricing .rightcol ul > li,
+.lightbox .pricing .rightcol ul > li label {
+    width: auto !important;
+    display: inline-block;
+}
+.lightbox .pricing .rightcol .buttons {
+    margin: 0 auto;
+    padding: 20px 0 0;
+    clear: both;
+}
+.lightbox-category a.close {
+    background-position: 50% 50%;
+    width: 32px;
+    height: 32px;
+    top: 5px;
+    right: 5px;
 }
 .lightbox #popup {
     display: block !important;
@@ -646,6 +679,22 @@ form#form_login div.item a.forgotpassword,
     top: 0 !important;
     margin: 20px auto;
     padding: 20px !important;
+}
+.lightbox .preview {
+    font-size: 14px;
+}
+.lightbox .preview button {
+    padding: 5px 0;
+    width: 112px;
+    height: auto;
+}
+.lightbox .preview .search .head {
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.lightbox .preview .leftcol.fullwidth > br,
+.lightbox .preview .leftcol.fullwidth + .rightcol {
+    display: none;
 }
 .lightbox .preview .leftcol .image {
     margin: 0 auto;
@@ -691,19 +740,21 @@ form#form_login div.item a.forgotpassword,
 }
 .lightbox > .preview > .c > .leftcol.text.fullwidth > p > a > span {
     display: block;
-    padding-bottom: 20px;
-    padding-top: 20px;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
 .lightbox .preview .rightcol {
-    padding: 20px 0 0;
+    /*padding: 20px 0 0;*/
+    padding: 0;
     border-top: none;
 }
 .lightbox .preview .rightcol p.c {
     display: block;
-    margin-top: 163px;
+    /*margin-top: 163px;*/
 }
 .lightbox .preview .rightcol p.button-info {
     margin-top: 20px;
+    padding-top: 0;
 }
 .lightbox .preview .rightcol a.button-blue {
     padding: 5px 0;
@@ -711,6 +762,7 @@ form#form_login div.item a.forgotpassword,
 }
 .lightbox .preview .rightcol ul {
     height: auto;
+    height: 520px;
     width: auto;
 }
 .lightbox .preview .rightcol ul li {
